# execr

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
src/execr/executor/: core.py
tests/executor/: core_test.py
