[project]
name = "execr"
version = "0.1.0"
description = "Execute code remotely"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
dependencies = ["fastapi", "wasmtime"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = ["pre-commit", "ruff", "pyright", "pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/execr"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I001",
    "ISC",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101"]
